
Changes Since 0.17.1
====================

* docutils/nodes.py

  - ``Node.traverse()`` returns an iterator instead of a list.

* docutils/tools/math/math2html, docutils/writers/html5_polyglot/math.css

  - Fix bug #244 Wrong subscript/superscript order with
    ``--math-output=HTML``.
  - Don't use <tt> element (deprecated in HTML5).
  - Support commands ``\Bbbk`` and ``operatorname``.

* docutils/writers/latex2e/__init__.py

  - The setting `legacy_class_functions`_ now defaults to "False". 
    Adapt stylesheets modifying ``\DUadmonition`` and/or ``\DUtitle``.

* docutils/writers/latex2e/docutils.sty
    
  - Fix excessive padding above sidebar titles.

* docutils/writers/pseudoxml.py:

  - Fix option "detailled" under Python 2.7.

* docutils/writers/s5_html/themes/default

  - Remove IE 6 compatibility workarounds ``iepngfix.htc`` and
    ``blank.gif`` (fixes bug #169).

Release 0.17.1 (2021-04-16)
===========================

* docutils/utils/math/latex2mathml.py

  - Fix bug #406 (MathML translation of ``\mathbf``).

* docutils/writers/latex2e/__init__.py:

  - Open "docutils.sty" with encoding set to "utf8".
    Fixes bug #414: error with Py3k when locale encoding is "ascii".

* docutils/parsers/*.py, docutils/transforms/*.py

  - Provide fallbacks for parser config settings
    to facilitate programmatic use.

* docutils/writers/manpage.py

  - Apply patch #160: move macro defs above ``.TH``
    (thanks Willie and sorry for the delay).

Release 0.17 (2021-04-03)
=========================

* General

  - Installing with ``setup.py`` now requires ``setuptools``.
    Alternatively, install with `pip`_ (or "manually").
  - Use importlib.import_module() to programmatically import modules.
  - Fix bug #385: Import of language modules.

  .. _pip: https://pypi.org/project/pip/

* docutils/MANIFEST.in

  - Exclude test outputs.

* docutils/__init__.py

  - VersionInfo: ValueError for invalid values, fix comparison to tuples.

* docutils/languages/